fix some wrapping
git-svn-id: http://svn.vuze.com/public/plugins@28186 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2

--- a/xmwebui/transmission/web/style/transmission/vuze-mw-900.css
+++ b/xmwebui/transmission/web/style/transmission/vuze-mw-900.css
@@ -1,3 +1,7 @@
 div#torrent_logo {
 	display: none;
 }
+
+div#torrent_inspector {
+	width: 100%;
+}
